--- a/Tutorial E-Portfolio-Redo/index.html
+++ b/Tutorial E-Portfolio-Redo/index.html
@@ -47,7 +47,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text-cool-green">Jadon Smith</span> 👋
+              Hey! I'm <span class="text--cool-green">Jadon Smith</span> 👋
             </h1>
             <p class="about-me__info--para">
               I am a
@@ -78,6 +78,71 @@
           </figure>
         </div>
       </div>
+    </section>
+    <section id="Languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">This is my <span class="text--cool-green">technology stack</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                            alt="Html Logo" class="language__img" />
+                          </figure>
+                          <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                          <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="CSS Logo"
+                          class="language__img" />
+                          </figure>
+                          <span class="language__name">CSS</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                          <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="JavaScript Logo"
+                          class="language__img" />
+                          </figure>
+                          <span class="language__name">JavaScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                          <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                          alt="TypeScript Logo" class="language__img" />
+                        </figure>
+                        <span class="language__name">TypeScript</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img  src="./assets/sql-database-generic.svg"
+                            alt="Html Logo" class="language__img" />
+                          </figure>
+                          <span class="language__name">SQL (Soon)</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                          <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="React Logo"
+                          class="language__img language__img--SQL-fix" />
+                          </figure>
+                          <span class="language__name">React</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img  src="./assets/redux.svg"
+                            alt="Html Logo" class="language__img" />
+                          </figure>
+                          <span class="language__name">Redux</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img  src="./assets/Logomark_Full Color.svg"
+                            alt="Html Logo" class="language__img" />
+                          </figure>
+                          <span class="language__name">Firebase</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
   </body>
 </html>
