Text screen not displaying over project window

--- a/Tutorial E-Portfolio-Redo/index.html
+++ b/Tutorial E-Portfolio-Redo/index.html
@@ -74,75 +74,141 @@
             </div>
           </div>
           <figure class="about-me__img--container">
-            <img src="./assets/undraw_building_websites_i78t.svg" class="about-me__img" alt="">
+            <img
+              src="./assets/undraw_building_websites_i78t.svg"
+              class="about-me__img"
+              alt=""
+            />
           </figure>
         </div>
       </div>
     </section>
     <section id="Languages">
-        <div class="container">
-            <div class="row">
-                <h1 class="section__title">This is my <span class="text--cool-green">technology stack</span></h1>
-                <div class="language__list">
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                            alt="Html Logo" class="language__img" />
-                          </figure>
-                          <span class="language__name">HTML</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                          <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="CSS Logo"
-                          class="language__img" />
-                          </figure>
-                          <span class="language__name">CSS</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                          <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="JavaScript Logo"
-                          class="language__img" />
-                          </figure>
-                          <span class="language__name">JavaScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                          <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
-                          alt="TypeScript Logo" class="language__img" />
-                        </figure>
-                        <span class="language__name">TypeScript</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img  src="./assets/sql-database-generic.svg"
-                            alt="Html Logo" class="language__img" />
-                          </figure>
-                          <span class="language__name">SQL (Soon)</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                          <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="React Logo"
-                          class="language__img language__img--SQL-fix" />
-                          </figure>
-                          <span class="language__name">React</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img  src="./assets/redux.svg"
-                            alt="Html Logo" class="language__img" />
-                          </figure>
-                          <span class="language__name">Redux</span>
-                    </div>
-                    <div class="language">
-                        <figure class="language__img--wrapper">
-                            <img  src="./assets/Logomark_Full Color.svg"
-                            alt="Html Logo" class="language__img" />
-                          </figure>
-                          <span class="language__name">Firebase</span>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--cool-green">technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt="Html Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
             </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt="CSS Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt="JavaScript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                  alt="TypeScript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">TypeScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="./assets/sql-database-generic.svg"
+                  alt="Html Logo"
+                  class="language__img SQL-fix"
+                />
+              </figure>
+              <span class="language__name">SQL (Soon)</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt="React Logo"
+                  class="language__img React-fix"
+                />
+              </figure>
+              <span class="language__name">React</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="./assets/redux.svg"
+                  alt="Html Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Redux</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="./assets/Logomark_Full Color.svg"
+                  alt="Html Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Firebase</span>
+            </div>
+          </div>
         </div>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--cool-green">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car Subscription Project"
+                />
+                <div class="project__description"></div>
+                <h3 class="project__description--title">Car Sales Project</h3>
+                <h4 class="project__description--sub-title">
+                  HTML, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                  libero fuga minima perferendis corporis doloremque eos
+                  architecto esse saepe fugit? Ipsum unde ipsa earum dolorem?
+                </p>
+                <div class="project__description--links">
+                  <a href="www.github.com/yourlink/example" target="_blank" class="project__description--link"></a>
+                  <i class="fa-brands fa-github"></i>
+                  <a href="www.github.com/yourlink/example" class="project__description--link"></a>
+                  <i class="fas fa-link"></i>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
   </body>
 </html>
