--- a/Tutorial E-Portfolio-Redo/index.html
+++ b/Tutorial E-Portfolio-Redo/index.html
@@ -188,21 +188,101 @@
                   class="project__img"
                   alt="Car Subscription Project"
                 />
-                <div class="project__description"></div>
-                <h3 class="project__description--title">Car Sales Project</h3>
-                <h4 class="project__description--sub-title">
-                  HTML, CSS, JavaScript, Vue, Vuex
-                </h4>
-                <p class="project__description--para">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-                  libero fuga minima perferendis corporis doloremque eos
-                  architecto esse saepe fugit? Ipsum unde ipsa earum dolorem?
-                </p>
-                <div class="project__description--links">
-                  <a href="www.github.com/yourlink/example" target="_blank" class="project__description--link"></a>
-                  <i class="fa-brands fa-github"></i>
-                  <a href="www.github.com/yourlink/example" class="project__description--link"></a>
-                  <i class="fas fa-link"></i>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    libero fuga minima perferendis corporis doloremque eos
+                    architecto esse saepe fugit? Ipsum unde ipsa earum dolorem?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a
+                      href="https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car Subscription Project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    libero fuga minima perferendis corporis doloremque eos
+                    architecto esse saepe fugit? Ipsum unde ipsa earum dolorem?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a
+                      href="https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car Subscription Project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                    libero fuga minima perferendis corporis doloremque eos
+                    architecto esse saepe fugit? Ipsum unde ipsa earum dolorem?
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a
+                      href="https://www.github.com/yourlink/example"
+                      target="_blank"
+                      class="project__description--link"
+                    >
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
                 </div>
               </div>
             </li>
@@ -211,4 +291,44 @@
       </div>
     </section>
   </body>
-</html>
+  <footer>
+    <div class="row footer__row">
+      <a href="#" class="footer__anchor">
+        <figure class="footer__logo">
+        <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+      </figure>
+      <span class="footer__logo--popper">
+        Top
+        <i class= "fas fa-arrow-up"></i>
+      </span>
+      </a>
+      <div class="footer__social--list">
+        <a href="https://google.com" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        " target="_blank">GitHub</a>
+        <a href="https://google.com" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        " target="_blank">Linkedin</a>
+        <a href="mailto:email@email.com" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        " target="_blank">Email</a>
+        <!-- ^^^^Send Directly to Email^^^^ -->
+
+        <a href="./assets/Example Resume.pdf" class="
+        footer__social--link
+        link__hover-effect
+        link__hover-effect--white
+        " target="_blank" download>Resume</a>
+      </div>
+      <div class="footer_copyright">
+        Copyright © 2021 Jadon Smith
+      </div>
+    </div>
+  </footer>
+  </html>
